--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.2",
     "lucide-react": "^0.303.0",
-    "next": "15.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^16.1.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.2.0",
     "three": "^0.159.0"
   },
